--- a/LandingPage Fab2/sections/quem-e.html
+++ b/LandingPage Fab2/sections/quem-e.html
@@ -1,1 +1,83 @@
-<section><p>quem-e</p></section>
+<section class="quem-e">
+    <section class="quem-e__container">
+        <section class="quem-e--1">
+            <div class="quem-e--1__container--content">
+                <div class="quem-e--1__content">
+                    <h2>Quem é Fabrícia Bitencourt?</h2>
+                    <p>
+                        Fabrícia Mendes Bitencourt Schmitz é casada com Vitor Schmitz, tem dois filhos e reside
+                        atualmente em
+                        sua
+                        cidade natal, Tubarão – SC. É mestre em Terapia Sistêmica, graduada em Serviço Social e
+                        habilitada para
+                        o exercício da Terapia Ayurvédica, Psicologia Transpessoal, comunicação e Psicoterapias -
+                        Regressão,
+                        Hipnoterapia, em Medicinas Naturais Alternativas, Naturopatia, Homeopatia, Analista de perfil
+                        comportamental e Coaching. Integral Sistêmica Internacional.
+                    </p>
+                    <p class="highlight-gold">
+                        Atua como palestrante Internacional em Inteligência Emocional, Empreendedorismo e
+                        espiritualidade, como
+                        Terapeuta Sistêmica, direciona trabalhos com grupos de mulheres vítimas de violação por abusos
+                        sexuais,
+                        agressões físicas e/ou psicológicas.
+                    </p>
+                </div>
+            </div>
+
+            <div class="quem-e--1__container--img">
+                <img src="../assets/images/queme1fab-image-desktop.svg" alt="Imagem de Fabrícia Bitencourt">
+            </div>
+        </section>
+        <section class="quem-e--2">
+
+            <img src="../assets/images/queme2fab-image-mobile.svg" alt="Imagem de Fabrícia Bitencourt" />
+
+            <div class="quem-e--2__content">
+                <p>
+                    Na área empresarial, o sucesso e a experiência em gestão de finanças a conduziram a ser
+                    empreendedora e Diretora na área de logística, em sua empresa Transtac Transporte, atendendo em todo
+                    o
+                    Brasil, nos EUA e na Europa.
+                </p>
+
+                <div class="quem-e--2__content--desktop">
+                    <p class="highlight-gold">
+                        Fundadora e CEO do Institute For Life Fabrícia mentoreia mais de 3 mil mulheres empreendedoras e
+                        empresárias, trabalhando os traumas que as impedem de chegar ao estado desejado, potencializando
+                        suas
+                        habilidades a terem alta performance em suas atividades para que tenham independência
+                        financeira,
+                        posicionamento e autoridade emocional e espiritual resultando em um sucesso de uma vida com
+                        plenitude,
+                        resultando em um sucesso assertivo e mais lucrativo.
+                    </p>
+                    <p>
+                        Lançou livro solo sucesso de vendas "Ninguém vence no improviso, também é coautora do livro
+                        "Princípios da empreendedora de sucesso", participou no devocional 21 pílulas para mulheres.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="quem-e--3">
+            <div class="quem-e--3__content--1">
+                <p>
+                    Fundadora e CEO do Institute For Life Fabrícia mentoreia mais de 3 mil mulheres empreendedoras e
+                    empresárias, trabalhando os traumas que as impedem de chegar ao estado desejado, potencializando
+                    suas
+                    habilidades a terem alta performance em suas atividades para que tenham independência financeira,
+                    posicionamento e autoridade emocional e espiritual resultando em um sucesso de uma vida com
+                    plenitude,
+                    resultando em um sucesso assertivo e mais lucrativo.
+                </p>
+            </div>
+            <div class="quem-e--3__content--2 highlight-gold">
+                <img src="../assets/images/queme3livro-image-mobile.svg" alt="Livro Fabrícia Bitencourt" />
+                <p>
+                    Lançou livro solo sucesso de vendas "Ninguém vence no improviso, também é coautora do livro
+                    "Princípios da empreendedora de sucesso", participou no devocional 21 pílulas para mulheres.
+                </p>
+            </div>
+        </section>
+    </section>
+</section>
