so falta juntar

--- a/LandingPage Fab2/sections/frase-impacto.html
+++ b/LandingPage Fab2/sections/frase-impacto.html
@@ -4,7 +4,7 @@
       Quando confiança, propósito
       e estratégia <span class="highlight-gold">caminham</span>
       <span class="highlight-gold">juntas</span>,
-      <strong class="highlight-white">os resultados são inevitáveis.</strong>
+      <strong class="highlight-white"><i>os resultados são inevitáveis.</i></strong>
     </p>
   </div>
 </section>
