--- a/LandingPage Fab2/sections/mentora.html
+++ b/LandingPage Fab2/sections/mentora.html
@@ -3,7 +3,7 @@
             <h2 class="mentora__title--1">Mentora</h2>
             <h3 class="mentora__title--2">Internacional</h2><br>
             <div class="btn__clique-aqui">
-                <a href="" class="btn__clique-aqui--text">Clique Aqui</a>
+                <a href="https://fabriciabitencourt.com.br/mentorias/" class="btn__clique-aqui--text">Clique Aqui</a>
             </div>
         </div>
 </section>
