--- a/LandingPage Fab2/sections/quem-e.html
+++ b/LandingPage Fab2/sections/quem-e.html
@@ -8,12 +8,12 @@
                         Fabrícia Mendes Bitencourt Schmitz é casada com Vitor Schmitz, tem dois filhos e reside
                         atualmente em
                         sua
-                        cidade natal, Tubarão – SC. É mestre em Terapia Sistêmica, graduada em Serviço Social e
+                        cidade natal, Tubarão - SC. É mestre em Terapia Sistêmica, graduada em Serviço Social e
                         habilitada para
                         o exercício da Terapia Ayurvédica, Psicologia Transpessoal, comunicação e Psicoterapias -
                         Regressão,
-                        Hipnoterapia, em Medicinas Naturais Alternativas, Naturopatia, Homeopatia, Analista de perfil
-                        comportamental e Coaching. Integral Sistêmica Internacional.
+                        Hipnoterapia -, em Medicinas Naturais Alternativas - Naturopatia, Homeopatia -, Analista de perfil
+                        comportamental e Coaching Integral Sistêmica Internacional.
                     </p>
                     <p class="highlight-gold">
                         Atua como palestrante Internacional em Inteligência Emocional, Empreendedorismo e
@@ -53,8 +53,8 @@
                         resultando em um sucesso assertivo e mais lucrativo.
                     </p>
                     <p>
-                        Lançou livro solo sucesso de vendas "Ninguém vence no improviso, também é coautora do livro
-                        "Princípios da empreendedora de sucesso", participou no devocional 21 pílulas para mulheres.
+                        Lançou livro solo sucesso de vendas <strong>"Ninguém vence no improviso"</strong>, também é coautora do livro
+                        <strong>"Princípios da empreendedora de sucesso"</strong>, participou no devocional <strong>"21 pílulas para mulheres"</strong>.
                     </p>
                 </div>
             </div>
