--- a/LandingPage Fab2/sections/tiktok.html
+++ b/LandingPage Fab2/sections/tiktok.html
@@ -4,7 +4,7 @@
             <h2 class="rede__title">TikTok</h2>
             <p class="rede__profile">@fabriciambitencourt</p>
             <div class="btn__clique-aqui">
-                <a href="https://www.tiktok.com/fabriciambitencourt/" class="btn__clique-aqui--text">Clique Aqui</a>
+                <a href="https://www.tiktok.com/@fabriciambitencourt" class="btn__clique-aqui--text">Clique Aqui</a>
             </div>
         </div>
         <div class="rede__img-container">
