--- a/LandingPage Fab2/sections/facebook.html
+++ b/LandingPage Fab2/sections/facebook.html
@@ -4,7 +4,7 @@
             <h2 class="rede__title">Facebook</h2>
             <p class="rede__profile">Fabricia M Bitencourt</p>
             <div class="btn__clique-aqui">
-                <a href="https://www.facebook.com/fabriciambitencourt/" class="btn__clique-aqui--text">Clique Aqui</a>
+                <a href="https://www.facebook.com/fabricia.bitencourt" class="btn__clique-aqui--text">Clique Aqui</a>
             </div>
         </div>
         <div class="rede__img-container">
